Add software architecture, collection view, collection view cell and launch screen image

--- a/DogApp/DogApp/Base.lproj/Main.storyboard
+++ b/DogApp/DogApp/Base.lproj/Main.storyboard
@@ -1,24 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Dog Breed Images View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="DogBreedImagesView" customModule="DogApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="POB-Vr-W15">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CIy-dl-cjR" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1000"/>
+                                        <subviews>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dEL-yo-c5D">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="1000"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cFS-7O-kmD">
+                                                    <size key="itemSize" width="128" height="128"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="BiJ-rX-elk" customClass="DogBreedImagesViewCell" customModule="DogApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="4uA-S8-DQ3">
+                                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </collectionViewCellContentView>
+                                                    </collectionViewCell>
+                                                </cells>
+                                            </collectionView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="dEL-yo-c5D" secondAttribute="trailing" id="0oz-gh-4qH"/>
+                                            <constraint firstAttribute="bottom" secondItem="dEL-yo-c5D" secondAttribute="bottom" id="91r-9l-bqy"/>
+                                            <constraint firstItem="dEL-yo-c5D" firstAttribute="leading" secondItem="CIy-dl-cjR" secondAttribute="leading" id="d7q-UG-WQd"/>
+                                            <constraint firstItem="dEL-yo-c5D" firstAttribute="top" secondItem="CIy-dl-cjR" secondAttribute="top" id="qau-Ei-w3u"/>
+                                            <constraint firstAttribute="height" constant="1000" id="qpw-pN-yty"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="CIy-dl-cjR" firstAttribute="leading" secondItem="koq-DK-9LJ" secondAttribute="leading" id="4Tr-Re-Gs2"/>
+                                    <constraint firstItem="CIy-dl-cjR" firstAttribute="bottom" secondItem="koq-DK-9LJ" secondAttribute="bottom" id="7r7-Sj-Xf5"/>
+                                    <constraint firstItem="CIy-dl-cjR" firstAttribute="trailing" secondItem="koq-DK-9LJ" secondAttribute="trailing" id="O5x-bL-pQg"/>
+                                    <constraint firstItem="CIy-dl-cjR" firstAttribute="width" secondItem="b6Z-yB-JQx" secondAttribute="width" id="cVV-EH-P6F"/>
+                                    <constraint firstItem="CIy-dl-cjR" firstAttribute="top" secondItem="koq-DK-9LJ" secondAttribute="top" id="hZO-vb-VL7"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="koq-DK-9LJ"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="b6Z-yB-JQx"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="POB-Vr-W15" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5QQ-mX-whM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="POB-Vr-W15" secondAttribute="bottom" id="Dvs-SQ-B4A"/>
+                            <constraint firstItem="POB-Vr-W15" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hgs-30-idv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="POB-Vr-W15" secondAttribute="trailing" id="PSJ-JO-bMp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="dEL-yo-c5D" id="Pbg-ZJ-oNu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-30" y="4"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
