--- a/DogApp/DogApp/DogBreedImages/Presentation/Views/DogBreedImagesViewCell.xib
+++ b/DogApp/DogApp/DogBreedImages/Presentation/Views/DogBreedImagesViewCell.xib
@@ -10,36 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DogBreedImagesViewCell" customModule="DogApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="271"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DogBreedImagesViewCell" id="gTV-IL-0wX" customClass="DogBreedImagesViewCell" customModule="DogApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="300" height="271"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kae-2g-oGi">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="271"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image.rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="Xjs-UO-UMQ">
+                        <rect key="frame" x="136" y="0.0" width="128" height="155.33333333333334"/>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTQ-Wb-v0c">
+                        <rect key="frame" x="0.0" y="155.33333333333334" width="400" height="74"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image.rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="Xjs-UO-UMQ">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="216.66666666666666"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zEm-tc-DJu">
-                                <rect key="frame" x="8.0000000000000018" y="226.66666666666666" width="20.666666666666671" height="17.666666666666657"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="zEm-tc-DJu" secondAttribute="height" multiplier="1:1" id="uFW-gU-gsU"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="3BQ-zk-0Df">
-                                <rect key="frame" x="11.999999999999996" y="253.33333333333334" width="42.666666666666657" height="9.6666666666666572"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HZJ-eR-kME">
+                                <rect key="frame" x="0.0" y="4" width="50.666666666666664" height="34.333333333333336"/>
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
+                                <connections>
+                                    <action selector="likeAction:" destination="gTV-IL-0wX" eventType="touchUpInside" id="9sC-HQ-xqv"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="fSU-tJ-WB4">
+                                <rect key="frame" x="21.333333333333332" y="42.333333333333314" width="43.666666666666671" height="15.666666666666664"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBB-jt-GVx">
-                                        <rect key="frame" x="0.0" y="0.0" width="8.3333333333333339" height="9.6666666666666661"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="8.3333333333333339" height="15.666666666666666"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ez-Ve-gab">
-                                        <rect key="frame" x="11.333333333333334" y="0.0" width="31.333333333333329" height="9.6666666666666661"/>
+                                        <rect key="frame" x="12.333333333333334" y="0.0" width="31.333333333333329" height="15.666666666666666"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -49,30 +52,32 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Xjs-UO-UMQ" secondAttribute="trailing" id="17l-87-IYx"/>
-                            <constraint firstAttribute="bottom" secondItem="3BQ-zk-0Df" secondAttribute="bottom" constant="8" id="EqO-bW-l44"/>
-                            <constraint firstItem="Xjs-UO-UMQ" firstAttribute="leading" secondItem="kae-2g-oGi" secondAttribute="leading" id="IvA-ez-ubk"/>
-                            <constraint firstItem="3BQ-zk-0Df" firstAttribute="top" secondItem="zEm-tc-DJu" secondAttribute="bottom" constant="8" id="SWi-Ow-KaL"/>
-                            <constraint firstItem="Xjs-UO-UMQ" firstAttribute="height" secondItem="kae-2g-oGi" secondAttribute="height" multiplier="0.8" id="Z9g-NR-E0q"/>
-                            <constraint firstItem="Xjs-UO-UMQ" firstAttribute="top" secondItem="kae-2g-oGi" secondAttribute="top" id="fjl-Pg-U7x"/>
-                            <constraint firstItem="zEm-tc-DJu" firstAttribute="leading" secondItem="kae-2g-oGi" secondAttribute="leading" constant="8" id="hiE-JH-u3k"/>
-                            <constraint firstItem="zEm-tc-DJu" firstAttribute="top" secondItem="Xjs-UO-UMQ" secondAttribute="bottom" constant="8" id="pGP-ar-7cf"/>
-                            <constraint firstAttribute="trailing" secondItem="zEm-tc-DJu" secondAttribute="trailing" id="qsz-FJ-8zg"/>
-                            <constraint firstAttribute="trailing" secondItem="3BQ-zk-0Df" secondAttribute="trailing" id="rKf-MS-GWY"/>
-                            <constraint firstItem="3BQ-zk-0Df" firstAttribute="leading" secondItem="kae-2g-oGi" secondAttribute="leading" constant="12" id="u8C-jP-pe5"/>
+                            <constraint firstItem="fSU-tJ-WB4" firstAttribute="top" secondItem="HZJ-eR-kME" secondAttribute="bottom" constant="4" id="6p5-g8-x5C"/>
+                            <constraint firstAttribute="bottom" secondItem="fSU-tJ-WB4" secondAttribute="bottom" constant="16" id="7Y5-Or-pQF"/>
+                            <constraint firstItem="HZJ-eR-kME" firstAttribute="leading" secondItem="eTQ-Wb-v0c" secondAttribute="leading" id="8VP-o1-GR6"/>
+                            <constraint firstItem="oBB-jt-GVx" firstAttribute="centerX" secondItem="HZJ-eR-kME" secondAttribute="centerX" id="PE7-FB-3yX"/>
+                            <constraint firstItem="HZJ-eR-kME" firstAttribute="top" secondItem="eTQ-Wb-v0c" secondAttribute="top" constant="4" id="lp0-La-1JH"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="kae-2g-oGi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="JcF-XH-w1c"/>
-                <constraint firstAttribute="trailing" secondItem="kae-2g-oGi" secondAttribute="trailing" id="h8g-LE-dNu"/>
-                <constraint firstAttribute="bottom" secondItem="kae-2g-oGi" secondAttribute="bottom" id="jor-q3-UKg"/>
-                <constraint firstItem="kae-2g-oGi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="tqP-GN-rfx"/>
+                <constraint firstItem="Xjs-UO-UMQ" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Eh0-JM-4a2"/>
+                <constraint firstAttribute="trailing" secondItem="eTQ-Wb-v0c" secondAttribute="trailing" id="OA9-OV-6j2"/>
+                <constraint firstItem="Xjs-UO-UMQ" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.75" id="W64-q5-AAn"/>
+                <constraint firstItem="eTQ-Wb-v0c" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="l6f-QM-bG0"/>
+                <constraint firstItem="Xjs-UO-UMQ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="p5k-qL-x1h"/>
+                <constraint firstItem="eTQ-Wb-v0c" firstAttribute="top" secondItem="Xjs-UO-UMQ" secondAttribute="bottom" id="s82-Oh-6fh"/>
             </constraints>
-            <size key="customSize" width="227" height="301"/>
-            <point key="canvasLocation" x="134.35114503816794" y="95.422535211267615"/>
+            <size key="customSize" width="223" height="211"/>
+            <connections>
+                <outlet property="imageView" destination="Xjs-UO-UMQ" id="wE8-7A-zi6"/>
+                <outlet property="likeButton" destination="HZJ-eR-kME" id="gO1-TW-AFW"/>
+                <outlet property="likesCountLabel" destination="oBB-jt-GVx" id="zbN-Zg-keh"/>
+                <outlet property="likesLabel" destination="4Ez-Ve-gab" id="atJ-rp-cMr"/>
+            </connections>
+            <point key="canvasLocation" x="131.29770992366412" y="157.04225352112678"/>
         </collectionViewCell>
     </objects>
     <resources>
@@ -80,6 +85,9 @@
         <image name="image.rectangle" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
