--- a/DogApp/DogApp/DogBreedImages/Presentation/Views/DogBreedImagesViewCell.xib
+++ b/DogApp/DogApp/DogBreedImages/Presentation/Views/DogBreedImagesViewCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image.rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="Xjs-UO-UMQ">
-                        <rect key="frame" x="136" y="0.0" width="128" height="155.33333333333334"/>
+                        <rect key="frame" x="136" y="0.0" width="128" height="225"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTQ-Wb-v0c">
-                        <rect key="frame" x="0.0" y="155.33333333333334" width="400" height="66"/>
+                        <rect key="frame" x="0.0" y="225" width="400" height="66"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HZJ-eR-kME">
                                 <rect key="frame" x="0.0" y="4" width="50.666666666666664" height="34.333333333333336"/>
@@ -65,7 +65,7 @@
             <constraints>
                 <constraint firstItem="Xjs-UO-UMQ" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Eh0-JM-4a2"/>
                 <constraint firstAttribute="trailing" secondItem="eTQ-Wb-v0c" secondAttribute="trailing" id="OA9-OV-6j2"/>
-                <constraint firstItem="Xjs-UO-UMQ" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.75" id="W64-q5-AAn"/>
+                <constraint firstItem="Xjs-UO-UMQ" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.75" id="TJ7-fa-33L"/>
                 <constraint firstItem="eTQ-Wb-v0c" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="l6f-QM-bG0"/>
                 <constraint firstItem="Xjs-UO-UMQ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="p5k-qL-x1h"/>
                 <constraint firstItem="eTQ-Wb-v0c" firstAttribute="top" secondItem="Xjs-UO-UMQ" secondAttribute="bottom" id="s82-Oh-6fh"/>
